--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,8 @@ img {
 
 /* ---------Універсальні класи--------- */
 body {
+    position: relative;
+
     background-color: var(--primary-white-color);
     color: var(--primary-text-color);
     font-family: Roboto, sans-serif;
@@ -208,6 +210,8 @@ body {
 
 /*--------- Герой--------- */
 .hero {
+    
+
     height: 600px;
     text-align: center;
     padding: 200px 0;
@@ -269,6 +273,19 @@ height: 30px;
     width: 11px;
     height: 11px;
     fill: var(--primary-logo-color);
+}
+
+.backdrop {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+
+    width: 528px;
+    height: 521px;
+    background-color: var(--primary-white-color);
+box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+border-radius: 4px;
+    
 }
 /*--------- Переваги--------- */
 .benefits,
@@ -343,7 +360,7 @@ height: 30px;
     min-width: 370px;
 }
 
-.promo-modal {
+.promo-card {
     position: relative;
 }
 
