--- a/css/style.css
+++ b/css/style.css
@@ -55,8 +55,6 @@ img {
 
 /* ---------Універсальні класи--------- */
 body {
-    position: relative;
-
     background-color: var(--primary-white-color);
     color: var(--primary-text-color);
     font-family: Roboto, sans-serif;
@@ -106,10 +104,9 @@ body {
 }
 
 .nav-list {
-    
-
     display: flex;
     align-items: center;
+    
     margin-left: auto;
     padding: 32px 0;
 }
@@ -156,6 +153,7 @@ body {
     position: absolute;
     bottom: -33px;
     right: 0px;
+    
     content: "";
     width: 100%;
     height: 4px;
@@ -207,11 +205,36 @@ body {
     fill: currentColor;
 }
 
+.backdrop {
+    position: relative;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+   
+    width: 528px;
+    height: 521px;
+    
+    background-color: var(--primary-white-color);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 1px 1px rgba(0, 0, 0, 0.14), 
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+}
+
 
 /*--------- Герой--------- */
 .hero {
     
-
     height: 600px;
     text-align: center;
     padding: 200px 0;
@@ -260,13 +283,16 @@ body {
     background-color: var(--accent-btn-color);
 }
 
+
 .hero-close-btn {
+    position: absolute; 
+    top: 0;
+    right: 0;
+
     width: 30px;
-height: 30px;
-    
+    height: 30px;
     border-radius: 50%;
     border: 1px solid rgba(0, 0, 0, 0.1);
-
 }
 
 .hero-icons {
@@ -275,18 +301,7 @@ height: 30px;
     fill: var(--primary-logo-color);
 }
 
-.backdrop {
-    position: absolute;
-    top: 50%;
-    left: 50%;
 
-    width: 528px;
-    height: 521px;
-    background-color: var(--primary-white-color);
-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-border-radius: 4px;
-    
-}
 /*--------- Переваги--------- */
 .benefits,
 .clients {
