--- a/css/style.css
+++ b/css/style.css
@@ -110,9 +110,7 @@ body {
 .nav-list {
     display: flex;
     align-items: center;
-
     margin-left: auto;
-    padding: 32px 0;
 }
 
 .nav-list>li:not(:last-child) {
@@ -121,6 +119,8 @@ body {
 
 .nav-link {
     position: relative;
+
+    padding: 32px 0;
     color: var(--primary-link-color);
     transition: color 250ms var(--timeng-function);
 }
@@ -137,13 +137,12 @@ body {
     font-size: 26px;
     line-height: 1.19;
     text-decoration: none;
+    
     margin-right: 93px;
-    transition: color 250ms var(--timeng-function);
-}
+    padding-top: 24px;
+    padding-bottom: 25px;
 
-.logo:hover,
-.logo:focus {
-    color: var(--accent-text-color);
+    transition: color 250ms var(--timeng-function);
 }
 
 .logo-span {
@@ -156,7 +155,7 @@ body {
 
 .current::after {
     position: absolute;
-    bottom: -33px;
+    bottom: 0px;
     right: 0px;
 
     content: "";
@@ -298,33 +297,12 @@ body {
         0px 1px 1px rgba(0, 0, 0, 0.14),
         0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
-
-    transform: scale(0 0);
-    transition: changeBgColor 250ms var(--timeng-function),
 }
-
-.modal:hover {
-    animation-name: changeBgColor;
-    animation-duration: 2000ms;
-}
-
-    @keyframes changeBgColor {
-        0% {
-          background-color: var(--title-text-color);
-        }
-        50% {
-          background-color: var(--hero-bg-color);
-        }
-        100% {
-          background-color: var(--primary-white-color);
-        }
-      }
-
 
 .hero-close-btn {
     position: absolute;
-    top: 0;
-    right: 0;
+    top: 8px;
+    right: 8px;
 
     width: 30px;
     height: 30px;
@@ -689,7 +667,6 @@ footer .join {
 
 .button-item:hover,
 .button-item:focus {
-    padding: 6px 25px;
     background-color: var(--accent-text-color);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
         0px 1px 2px rgba(0, 0, 0, 0.08),
@@ -736,7 +713,8 @@ footer .join {
     opacity: 0;
 }
 
-.preview-thumb:hover .preview-subtext {
+.preview-thumb:hover .preview-subtext,
+.preview-thumb:focus .preview-subtext {
     opacity: 1;
     transform: translateY(-100%);
     background-color: rgba(33, 150, 243, 0.9);
